--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
   <script src="assets/js/d3pie.min.js"></script>
   <script src="assets/js/ibeis.js"></script>
   <!-- controllers -->
+  <script src="app/controllers/workspace.module.js"></script>
   <script src="app/controllers/workspace.controller.js"></script>
   <!-- services -->
   <script src="app/services/wildbook.service.js"></script>
