Began prep to switch to Angular

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
   <!-- endbower -->
   <script src="assets/js/d3pie.min.js"></script>
   <script src="assets/js/ibeis.js"></script>
-  <!-- controllers -->
+  <!-- workspace -->
   <script src="app/controllers/workspace.module.js"></script>
   <script src="app/controllers/workspace.controller.js"></script>
   <!-- services -->
