start mark individual

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
   <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.css" />
+  <link rel="stylesheet" href="bower_components/photoswipe/dist/photoswipe.css" />
+  <link rel="stylesheet" href="bower_components/photoswipe/dist/default-skin/default-skin.css" />
   <!-- endbower -->
   <link rel="stylesheet" href="assets/css/ibeis.css">
   <link rel="stylesheet" href="assets/css/upload.css">
@@ -41,6 +43,11 @@
   <script src="bower_components/lazysizes/lazysizes.js"></script>
   <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
   <script src="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.js"></script>
+  <script src="bower_components/photoswipe/dist/photoswipe.js"></script>
+  <script src="bower_components/photoswipe/dist/photoswipe-ui-default.js"></script>
+  <script src="bower_components/ng-photoswipe/angular-photoswipe.min.js"></script>
+  <script src="bower_components/angular-mocks/angular-mocks.js"></script>
+  <script src="bower_components/ng-flow/dist/ng-flow.js"></script>
   <!-- endbower -->
   <script src="assets/js/d3pie.min.js"></script>
   <script src="assets/js/ibeis.js"></script>
