--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <!-- METADATA -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>IBEIS</title>
+  <title>Wildbook</title>
   <base href="." target="_blank">
   <!-- CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
@@ -65,6 +65,9 @@
   <script src="assets/js/angular-leaflet-directive.min.js"></script>
   <!--<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>-->
   <!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />-->
+  <!--bootstrap-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 
 <body class="layout-row" ng-view>
