Login complete besides server side

--- a/public/index.html
+++ b/public/index.html
@@ -54,10 +54,13 @@
   <!-- workspace -->
   <script src="app/controllers/workspace.module.js"></script>
   <script src="app/controllers/workspace.controller.js"></script>
+  <!-- Login -->
+  <script src="app/controllers/login.module.js"></script>
+  <script src="app/controllers/login.controller.js"></script>
   <!-- services -->
   <script src="app/services/wildbook.service.js"></script>
   <!-- config -->
-  <script src="assets/js/uploadConfig.js"></script>
+  <!-- <script src="assets/js/uploadConfig.js"></script> -->
   <!-- angular app -->
   <script src="app/ibeis.routes.js"></script>
   <script src="app/ibeis.js"></script>
@@ -70,7 +73,7 @@
 
 </head>
 
-<body class="layout-row" ng-view>
+<body class="layout-row" ng-view style="font-family: 'Scope One'">
 </body>
 
 </html>
