Login, registration and authentication setup, fixed buncha bugs

--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,15 @@
   <!-- workspace -->
   <script src="app/controllers/workspace.module.js"></script>
   <script src="app/controllers/workspace.controller.js"></script>
-  <!-- Login -->
+  <!-- Login/Register -->
   <script src="app/controllers/login.module.js"></script>
   <script src="app/controllers/login.controller.js"></script>
+  <script src="app/controllers/register.module.js"></script>
+  <script src="app/controllers/register.controller.js"></script>
   <!-- services -->
   <script src="app/services/wildbook.service.js"></script>
+  <script src="app/services/authentication.service.js"></script>
+  <script src="app/services/session.service.js"></script>
   <!-- config -->
   <!-- <script src="assets/js/uploadConfig.js"></script> -->
   <!-- angular app -->
